<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Train Spotting</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="deleteAll">Delete All</string>
    <item type="id" name="add">Add</item>
    <item type="id" name="delete">Delete</item>
    <item type="id" name="deleteAll">DeleteAll</item>
    <string name="addAtrain">Add a Train</string>
    <string name="addTrainNo">Add the Train no:</string>
    <string name="addTrainName">Add the Train name:</string>
    <string name="save">Save</string>
    <string name="newTrain">Select a train:</string>
    <string name="newDay">Select the day:</string>
    <string name="locateTrain">Locate Train</string>
    <string name="cancel">Cancel</string>
    <string name="whereTrain">Where is my train?</string>
    <string name="sp1">trainnumbertrainname</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    

</resources>