
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
          <TextView
              android:id="@+id/textView1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/addAtrain"
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/textView2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_below="@+id/textView1"
              android:layout_marginTop="14dp"
              android:text="@string/addTrainNo"
              android:textAppearance="?android:attr/textAppearanceMedium" />

          <TextView
              android:id="@+id/textView3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_below="@+id/editText1"
              android:layout_marginTop="22dp"
              android:text="@string/addTrainName"
              android:textAppearance="?android:attr/textAppearanceMedium" />
          
         <EditText
              android:id="@+id/editText1"
              android:layout_width="150dip"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/textView2"
              android:layout_alignBottom="@+id/textView2"
              android:layout_toRightOf="@+id/textView3"
              android:ems="10"
              android:inputType="number" />

          <EditText
              android:id="@+id/editText2"
              android:layout_width="150dip"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/textView3"
              android:layout_alignBottom="@+id/textView3"
              android:layout_toRightOf="@+id/textView3"
              android:ems="10" 
              android:inputType="text" />

              
          

          <Button
              android:id="@+id/button1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_below="@+id/editText2"
              android:layout_marginTop="22dp"
              android:onClick="save"
              android:text="@string/save" />

          <Button
              android:id="@+id/button3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/button2"
              android:layout_alignBottom="@+id/button2"
              android:layout_marginLeft="26dp"
              android:layout_toRightOf="@+id/button2"
              android:onClick="back"
              android:text="@string/back" />

 
          

          <Button
              android:id="@+id/button2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignBaseline="@+id/button1"
              android:layout_alignBottom="@+id/button1"
              android:layout_toLeftOf="@+id/editText2"
              android:onClick="cancel"
              android:text="@string/cancel" />

    </RelativeLayout>
